[package]
name = "adlo"
version = "0.1.0"
edition = "2021"
authors = ["Nigel Christian <nigel.christian@hiahatf.org>"]
documentation = "https://docs.rs/adlo"
description = "Adaptive LLL algorithm for solving SVP"
repository = "https://github.com/kn0sys/adlo"
license = "MIT"
keywords = [
	"lattice-theory",
	"svp",
	"algebra",
	"math"
]
categories = ["math"]

[lib]
name = "adlo"
path = "src/lib.rs"
crate-type = ["lib"]

[dependencies]
nalgebra = "0.33"
