[package]
name = "adlo"
version = "0.1.3"
edition = "2021"
authors = ["n12n <nigel.christian@hiahatf.org>"]
documentation = "https://docs.rs/adlo"
description = "Adaptive LLL algorithm for solving SVP"
repository = "https://github.com/kn0sys/adlo"
license = "MIT"
keywords = [
	"lattice-theory",
	"svp",
	"algebra",
	"math"
]
categories = ["mathematics"]

[lib]
name = "adlo"
path = "src/lib.rs"
crate-type = ["lib"]

[dependencies]
nalgebra = "0.33"
